--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jolie-postinstall",
   "version": "1.0.2",
   "description": "",
-  "main": "./src",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
