--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "jolie-postinstall",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "",
   "main": "./src/index.js",
+  "bin": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
