--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "jolie-postinstall",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
-  "main": "./src/index.js",
-  "bin": "./src/index.js",
+  "bin": "./cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +21,7 @@
     "cli-spinners": "^2.5.0",
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
+    "jolie-jwt": "^1.0.2",
     "node-fetch": "^2.6.1",
     "ora": "^5.3.0",
     "pom-parser": "^1.2.0"
